# ultimate

./: .gitignore  README.md  config.example.json  config.yaml  hermes.md  requirements.txt  sessions.json  test.py  ultimate.py
.superpowers/brainstorm/: .last-token
agentd/agent/: budget.py  runner.py
agentd/bootstrap/: __init__.py  container.py  context.py  loader.py
agentd/context/: __init__.py  context.py  session.py
agentd/memory/: memory.py
agentd/prompt/: prompts.py
agentd/providers/: __init__.py  anthropic.py  base.py  error_mapper.py  router.py
agentd/session/: __init__.py  session_db.py
agentd/skill/: skill.py
agentd/soul/: soul.py
agentd/tools/: audit.py  browser_tools.py  file_tools.py  memory_tools.py  param_repair.py  (+4 more)
cli/: cli.py
config/: config.example.yaml  configs.py  logging_config.py
gateway/: __init__.py  events.py  gateway.py  tauri_platform.py
scripts/: download-whisper-model.py
study/: main.py  viewer.py
tests/: test_audit.py  test_config.py  test_container_isolation.py  test_error_mapper.py  test_guard_retry.py  test_param_repair.py  test_provider_router.py  test_sandbox.py  test_session_db.py  test_voice_platform.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs  window.rs  ws.rs
utils/: clients.py  path_tools.py  print_tools.py
workspace/: 2d38953d624e.jsonl  882eabb0cb8b.jsonl  90d488e598e3.jsonl  AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  c960160c6bb4.jsonl
(+322 files in other folders)
