[package]
name = "jarvis-ui"
version = "0.1.0"
edition = "2021"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "1", features = [ "system-tray" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.21"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "1", features = [] }
